// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Menu > Menu Item can be nested 1`] = `
<DocumentFragment>
  <div
    class="mdc-menu-surface--anchor"
  >
    <div
      aria-hidden="false"
      class="mdc-menu mdc-menu-surface mdc-menu-surface--animating-open"
    >
      <ul
        class="mdc-list mdc-menu__items mdc-deprecated-list"
        role="menu"
      >
        <li
          class="mdc-deprecated-list-item"
          role="menuitem"
          tabindex="0"
        >
          <div
            class="mdc-deprecated-list-item__ripple "
          />
          <span>
            Cookies
          </span>
        </li>
        <li
          class="mdc-deprecated-list-item"
          role="menuitem"
          tabindex="0"
        >
          <div
            class="mdc-deprecated-list-item__ripple "
          />
          <span>
            Pizza
          </span>
        </li>
        <li
          class="mdc-deprecated-list-item"
          role="menuitem"
          tabindex="0"
        >
          <div
            class="mdc-deprecated-list-item__ripple "
          />
          <span>
            Icecream
          </span>
        </li>
      </ul>
    </div>
    <button>
      Test
    </button>
  </div>
</DocumentFragment>
`;

exports[`Menu > MenuSurface renders 1`] = `
<DocumentFragment>
  <div
    class="mdc-menu-surface--anchor"
  >
    <button>
      Test
    </button>
    <div
      class="mdc-menu-surface mdc-menu-surface--animating-open"
    >
      <li
        class="mdc-deprecated-list-item"
        role="menuitem"
        tabindex="0"
      >
        <div
          class="mdc-deprecated-list-item__ripple "
        />
        Cookies
      </li>
      <li
        class="mdc-deprecated-list-item"
        role="menuitem"
        tabindex="0"
      >
        <div
          class="mdc-deprecated-list-item__ripple "
        />
        Pizza
      </li>
      <li
        class="mdc-deprecated-list-item"
        role="menuitem"
        tabindex="0"
      >
        <div
          class="mdc-deprecated-list-item__ripple "
        />
        Icecream
      </li>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Menu > SimpleMenu renders 1`] = `
<DocumentFragment>
  <div
    class="mdc-menu-surface--anchor"
  >
    <div
      aria-hidden="false"
      class="mdc-menu mdc-menu-surface mdc-menu-surface--animating-open mdc-menu-surface--is-open-below mdc-menu-surface--open"
      style="transform-origin: left top; left: 0px; top: 0px; max-height: 736px;"
    >
      <ul
        class="mdc-list mdc-menu__items mdc-deprecated-list"
        role="menu"
      >
        <li
          class="mdc-deprecated-list-item"
          role="menuitem"
          tabindex="0"
        >
          <div
            class="mdc-deprecated-list-item__ripple "
          />
          Cookies
        </li>
        <li
          class="mdc-deprecated-list-item"
          role="menuitem"
          tabindex="0"
        >
          <div
            class="mdc-deprecated-list-item__ripple "
          />
          Pizza
        </li>
        <li
          class="mdc-deprecated-list-item"
          role="menuitem"
          tabindex="0"
        >
          <div
            class="mdc-deprecated-list-item__ripple "
          />
          Icecream
        </li>
      </ul>
    </div>
    <button>
      Test
    </button>
  </div>
</DocumentFragment>
`;

exports[`Menu > SimpleMenuSurface renders 1`] = `
<DocumentFragment>
  <div
    class="mdc-menu-surface--anchor"
  >
    <div
      class="mdc-menu-surface mdc-menu-surface--animating-open mdc-menu-surface--is-open-below mdc-menu-surface--open"
      style="transform-origin: left top; left: 0px; top: 0px; max-height: 736px;"
    >
      <div>
        Hello
      </div>
    </div>
    <button>
      Test
    </button>
  </div>
</DocumentFragment>
`;

exports[`Menu > renders 1`] = `
<DocumentFragment>
  <div
    aria-hidden="false"
    class="mdc-menu mdc-menu-surface mdc-menu-surface--animating-open"
  >
    <ul
      class="mdc-list mdc-menu__items mdc-deprecated-list"
      role="menu"
    >
      <li
        class="mdc-deprecated-list-item"
        role="menuitem"
        tabindex="0"
      >
        <div
          class="mdc-deprecated-list-item__ripple "
        />
        Cookies
      </li>
      <li
        class="mdc-deprecated-list-item"
        role="menuitem"
        tabindex="0"
      >
        <div
          class="mdc-deprecated-list-item__ripple "
        />
        Pizza
      </li>
      <li
        class="mdc-deprecated-list-item"
        role="menuitem"
        tabindex="0"
      >
        <div
          class="mdc-deprecated-list-item__ripple "
        />
        Icecream
      </li>
    </ul>
  </div>
</DocumentFragment>
`;
